<resources>
    <string name="app_name">QTrobot</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="continue_text">Continue</string>
    <string name="child_preferred_name">Child preferred name</string>
    <string name="child_date_of_birth">Child date of birth</string>
    <string name="profile_title">Profile</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="additional_info">Additional Info</string>
    <string name="hello_greeting">Hello</string>
    <string name="Upcoming_Appointments">Upcoming Appointments</string>
    <string name="Users_Name">Users name</string>
    <string name="Colour_Scheme">Colour Scheme</string>
    <string name="Settings_label">Settings</string>
    <string name="go_back_button">Go back</string>
    <string name="notification_preferences_title">Notification Preferences</string>
    <string name="reminders_label">Would you like to receive routine reminders for brushing teeth?</string>
    <string name="streak_label">Would you like to receive notifications for your daily streak?</string>
    <string name="appointments_label">Would you like to receive notifications for appointment bookings?</string>
    <string name="add_child_profile_button">Change child profile</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="well_done">Well done!</string>
    <string name="youve_brushed_your_teeth">You\'ve brushed your teeth</string>
    <string name="days_in_a_row">Days in a row!</string>
    <string name="brush_teeth_title">Let\'s brush our teeth!</string>
    <string name="brushing_doing_well">You\'re doing well, keep it up</string>
    <string name="brushing_halfway">You\'re halfway there</string>
    <string name="brushing_nearly_done">Nearly done!</string>
    <string name="brushing_finished">You did it, well done!</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="what_to_expect">What to expect</string>
    <string name="learn_arrival">Arrival</string>
    <string name="learn_before_appt">Before appointment</string>
    <string name="learn_during_appt">During appointment</string>
    <string name="learn_after_appt">After appointment</string>
    <string name="dentist_helper">Dentist Helper</string>
    <string name="qtrobot_title">QTrobot</string>
</resources>